2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-fullscreen-popup.c:
	(ephy_fullscreen_popup_set_security_state),
	(ephy_fullscreen_popup_constructor),
	(ephy_fullscreen_popup_finalize):

	Port to new tooltips API.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* data/epiphany.desktop.in.in:

	Use new icon here too 

2007-07-10  Christian Persch  <chpe@gnome.org>

	* src/ephy-notebook.c: (ephy_notebook_switch_page_cb),
	(update_tabs_visibility), (ephy_notebook_init),
	(ephy_notebook_finalize), (sync_icon), (sync_label),
	(build_tab_label), (ephy_notebook_set_show_tabs),
	(ephy_notebook_remove):

	Port to new tooltips API.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* data/icons/32x32/apps/Makefile.am:
	* data/icons/32x32/Makefile.am:

	Add 32x32/apps to build. But currently there are no icons.

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* configure.ac:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/apps/Makefile.am:
	* data/icons/16x16/apps/epiphnay.svg:
	* data/icons/16x16/apps/epiphnay.png:	
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/apps/Makefile.am:
	* data/icons/22x22/apps/epiphnay.svg:
	* data/icons/22x22/apps/epiphnay.png:
	* data/icons/24x24/Makefile.am:
	* data/icons/24x24/apps/Makefile.am:
	* data/icons/24x24/apps/epiphnay.png:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/apps/Makefile.am:
	* data/icons/scalable/apps/epiphnay.svg:
	* lib/ephy-stock-icons.h:

	Install under hicolor and use "epiphany" named icon
	as application icon. See bug 385872.

	The icon is just a copy of "web-browser" in gnome-icon-theme

	* data/icons/Makefile.am:

	Update gtk icon cache for hicolor on install and uninstall

2007-07-10  Luca Ferretti  <elle.uca@libero.it>

	* data/icons/16x16/actions/Makefile.am:
	* data/icons/22x22/actions/Makefile.am:
	* data/icons/24x24/actions/Makefile.am:
	* data/icons/32x32/actions/Makefile.am:
	* data/icons/scalable/actions/Makefile.am:
	* data/icons/*/action/download.*:
