@@ -1,5 +1,12 @@
 2007-07-10  Christian Persch  <chpe@gnome.org>
 
+	* src/ephy-navigation-action.c: (connect_proxy),
+	(ephy_navigation_action_class_init):
+
+	Port to new tooltips API.
+	
+2007-07-10  Christian Persch  <chpe@gnome.org>
+
 	* src/ephy-fullscreen-popup.c:
 	(ephy_fullscreen_popup_set_security_state),
 	(ephy_fullscreen_popup_constructor),
